# TrafficSimulator

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  sim-ui.html
.github/workflows/: docker-publish.yml
api/: routes.py  schemas.py
docs/: Architecture.md  Performance.md
engine/: manager.py  utils.py
tests/: conftest.py  pyproject.toml  test_api.py  test_manager.py  test_utils.py
